2009-02-13  John W. Eaton  <jwe@octave.org>

	* toplev.cc (do_octave_atexit): Only save history if
	Vsaving_history is true.

2009-02-12  John W. Eaton  <jwe@octave.org>

	* data.cc, ov-base-diag.h, ov-base-mat.h, ov-base-scalar.h,
	ov-base-sparse.h, ov-base.cc, ov-base.h, ov-perm.h, ov-range.h,
	ov.h: Rename internal issorted and issorted_rows functions to
	is_sorted and is_sorted_rows.

	* ov-base-diag.h, ov-base-mat.h, ov-base-scalar.h, ov-base.h,
	ov-cell.h, ov-perm.h, ov-range.h, ov.h, data.cc, ov-base.cc,
	ov-cell.cc: Rename all uses of sortrows_idx to sort_rows_idx.

	* TEMPLATE-INST/Array-tc.cc: Don't instantiate sort functions for
	Arrays of octave_value objects.
	(octave_sort<octave_value>::ascending_compare,
	octave_sort<octave_value>::descending_compare): Delete.

	* ov.h (octave_value::cellstr_value): New function.
	* ov-base.cc, ov-base.h (octave_base_value::cellstr_value):
	New function.
	* ov-cell.h (octave_cell::cellstr_value, octave_cell::sort,
	octave_cell::sortrows_idx): New functions
	* Cell.h, Cell.cc (Cell::Cell (Array<std::string>)): New constructor.

	* TEMPLATE-INST/Array-tc.cc: Undo previous change.
	(octave_sort<octave_value>::ascending_compare,
	octave_sort<octave_value>::descending_compare):
	Pass args by const reference instead of value.

	* version.h (OCTAVE_VERSION): Now 3.1.52+.
	(OCTAVE_API_VERSION): Now api-v34+.

	* TEMPLATE-INST/Array-tc.cc
	(octave_sort<octave_value>::ascending_compare,
	octave_sort<octave_value>::descending_compare):
	Delete unused template specializations.
	Use NO_INSTANTIATE_ARRAY_SORT instead of INSTANTIATE_ARRAY_SORT
	for octave_values.

2009-02-11  Thomas Treichl  <Thomas.Treichl@gmx.net>

	* gl-render.h: Use HAVE_FRAMEWORK_OPENGL.
	* gl-render.cc (opengl_tesselator, opengl_renderer::draw, 
	opengl_renderer::init_marker): Use HAVE_FRAMEWORK_OPENGL.
	
2009-02-11  Jaroslav Hajek  <highegg@gmail.com>

	* ov.h (octave_value::issorted, octave_value::sortrows_idx,
	octave_value::issorted_rows): New methods.